# ruduino

./: .dockerignore  Cargo.toml  Dockerfile.ci  LICENSE-MIT  README.md  Xargo.toml  avr-atmega328p.json  build.rs  build.sh  regenerate-cores.sh
.github/workflows/: docker-image.yml
core_generator/: Cargo.toml  build.rs  gen.rs
core_generator/src/: gen.rs  main.rs
examples/: spi.rs  uart.rs
src/: .gitignore  config.rs  interrupt.rs  lib.rs  pin.rs  prelude.rs  reg.rs  register.rs  serial.rs  spi.rs  std_stub.rs  timer.rs  timer0.rs  timer1.rs  usart.rs
src/cores/: atmega168.rs  atmega168a.rs  atmega168p.rs  atmega168pa.rs  atmega16u4.rs  atmega328.rs  atmega328p.rs  atmega32u4.rs  atmega48.rs  atmega48a.rs  atmega48p.rs  atmega48pa.rs  atmega88.rs  atmega88a.rs  atmega88p.rs  atmega88pa.rs  mod.rs
src/io/: mod.rs  port.rs
src/legacy/: mod.rs  serial.rs
src/modules/: mod.rs  usart.rs
src/modules/spi/: clock.rs  mod.rs  settings.rs
src/modules/timer/: mod.rs  timer16.rs  timer8.rs
src/spi/: mod.rs  settings.rs
