[package]
name = "ruduino"
version = "0.1.1"
edition = "2018"
authors = [
  "The AVR-Rust Project Developers",
  "Jake Goulding <jake.goulding@gmail.com>",
  "Dylan McKay <me@dylanmckay.io>",
]

license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/avr-rust/ruduino"
description = """
Reusable components for AVR microcontrollers
"""

build = "core_generator/build.rs"

keywords = ["avr", "arduino", "uno"]

[build-dependencies]
avr-mcu = "0.2"

