[package]
name = "ruduino"
version = "0.2.4"
edition = "2018"
authors = [
  "The AVR-Rust Project Developers",
  "Jake Goulding <jake.goulding@gmail.com>",
  "Dylan McKay <me@dylanmckay.io>",
]

license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/avr-rust/ruduino"
description = """
Reusable components for AVR microcontrollers
"""

build = "core_generator/build.rs"

keywords = ["avr", "arduino", "uno"]

[features]
default = ["avr-std-stub"]

[dependencies]
avr-std-stub = { version = "1.0", optional = true }
target-cpu-macro = "0.1"

[build-dependencies]
avr-mcu = "0.3"
target-cpu-fetch = "0.1"

