[workspace]
members = [
  ".",
  "./core_generator",
]

[package]
name = "ruduino"
version = "0.3.3"
edition = "2018"
authors = [
  "The AVR-Rust Project Developers",
  "Jake Goulding <jake.goulding@gmail.com>",
  "Dylan McKay <me@dylanmckay.io>",
]

license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/avr-rust/ruduino"
description = """
Reusable components for AVR microcontrollers
"""

keywords = ["avr", "arduino", "uno"]

[features]
default = ["avr-std-stub"]
all-mcus = []

[dependencies]
avr-config = { version = "2.0", features = ["cpu-frequency"] }
avr_delay = { git = "https://github.com/avr-rust/delay", version = "0.4" }
avr-std-stub = { version = "1.0", optional = true }
const_env--value = "0.1"
target-cpu-macro = "0.1"

[build-dependencies]
avr-mcu = "0.3"

[package.metadata.docs.rs]
all-features = true # we specifically want to enable 'all-mcus' for documentation
