[package]
name = "ruduino-core-generator"
version = "0.0.0" # not versioned
publish = false
edition = "2018"
authors = [
  "The AVR-Rust Project Developers",
  "Jake Goulding <jake.goulding@gmail.com>",
  "Dylan McKay <me@dylanmckay.io>",
]

license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/avr-rust/ruduino"

[[bin]]
name = "ruduino-core-generator"
path = "src/main.rs"

[dependencies]
avr-mcu = "0.3"
target-cpu-fetch = "0.1"
